# FinalFantasyFootball

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
autotools/: configure.ac
src/: Makefile.am  main.c  stopif.h
